--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
         background-color: white;
         overflow:hidden;
         background-color:black;
+
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -o-user-select: none;
+        user-select: none;
       }
     </style>
   </head>
-  <body>
+  <body unselectable="on">
     <canvas id="canvas"></canvas>
     <script src="game.js" type="text/javascript"></script>
   </body>
