--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
         -ms-user-select: none;
         -o-user-select: none;
         user-select: none;
+        -webkit-tap-highlight-color: rgba(0,0,0,0)
+      }
+      canvas {
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -o-user-select: none;
+        user-select: none;
+        -webkit-tap-highlight-color: rgba(0,0,0,0)
       }
     </style>
   </head>
