--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   </head>
   <body unselectable="on">
     <canvas id="canvas"></canvas>
+    <script src="assetsList.js" type="text/javascript"></script>
     <script src="game.js" type="text/javascript"></script>
   </body>
 </html>
