--- a/challenge/index.html
+++ b/challenge/index.html
@@ -6,6 +6,9 @@
     <meta
       name='viewport'
       content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
+    <link rel="shortcut icon" type="image/ico" href="../favicon.ico"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
     <style media="screen">
       html, body {
         padding: 0;
@@ -33,6 +36,7 @@
         user-select: none;
         -webkit-tap-highlight-color: rgba(0,0,0,0)
       }
+
       #msg-wrapper {
         display: none;
         /* Hidden by default */
@@ -66,6 +70,7 @@
       }
 
       #msg-content {
+        font-family: 'Open Sans', sans-serif;
         text-align: center;
         background-color: #fefefe;
         margin: auto;
