--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta
       name='viewport'
       content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
     <style media="screen">
       html, body {
         padding: 0;
