make cookie banner not flash

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
 
       #msg-wrapper {
+        display: none;
         /* Hidden by default */
         position: fixed;
         /* Stay in place */
